ingress/not_needed/es-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: es-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: es-5050club-es-http
            port:
              number: 9200
